feat: pressure plot

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ tp2/main/main.iml
 /tp2/main/src/graficas
 /tp2/main/src/resultados
 /tp2/main/src/resultados_finales
+tp3/simulation.txt
+tp3/pressure_time.txt
